refactor(admin): 관리자 서비스 로직 안정성 및 효율성 개선